--- a/Website/.classpath
+++ b/Website/.classpath
@@ -32,8 +32,11 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-12.0.1">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/sqljdbc42.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AKASH/Downloads/ojdbc14.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
